添加antd 并处理了服务器不打包解析antd的样式文件

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "xiaokyo <904656778@qq.com>",
   "license": "MIT",
   "dependencies": {
+    "antd": "^3.20.3",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
@@ -13,6 +14,7 @@
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-loadable": "^5.5.0",
     "react-meta-tags": "^0.7.4",
     "react-redux": "^7.1.0",
     "react-router-dom": "^5.0.1",
@@ -25,6 +27,7 @@
     "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
+    "babel-plugin-import": "^1.12.0",
     "babel-plugin-react-css-modules": "^5.2.6",
     "clean-webpack-plugin": "^3.0.0",
     "core-js": "^3.1.4",
@@ -41,6 +44,7 @@
     "postcss-less": "^3.1.4",
     "postcss-loader": "^3.0.0",
     "postcss-preset-env": "^6.7.0",
+    "redux-logger": "^3.0.6",
     "url-loader": "^2.0.1",
     "webpack": "^4.35.3",
     "webpack-cli": "^3.3.6",
