--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "antd": "^3.20.3",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
+    "braft-editor": "^2.3.7",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
     "helmet": "^3.19.0",
-    "isomorphic-fetch": "^2.2.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-loadable": "^5.5.0",
