--- a/package.json
+++ b/package.json
@@ -7,11 +7,14 @@
   "license": "MIT",
   "dependencies": {
     "antd": "^3.20.3",
+    "apollo-boost": "^0.4.3",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "braft-editor": "^2.3.7",
     "cookie-parser": "^1.4.4",
     "express": "^4.17.1",
+    "graphql": "^14.4.2",
+    "graphql-tag": "^2.10.1",
     "helmet": "^3.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
