--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "helmet": "^3.19.0",
+    "node-fetch": "^2.6.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-loadable": "^5.5.0",
