--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
   "license": "MIT",
   "dependencies": {
     "antd": "^3.20.3",
-    "apollo-boost": "^0.3.0-rc.3",
-    "apollo-upload-client": "^11.0.0",
+    "apollo-boost": "^0.4.3",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "braft-editor": "^2.3.7",
