--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "helmet": "^3.19.0",
     "node-fetch": "^2.6.0",
     "react": "^16.8.6",
+    "react-cropper": "^1.2.0",
     "react-dom": "^16.8.6",
     "react-loadable": "^5.5.0",
     "react-meta-tags": "^0.7.4",
