--- a/package.json
+++ b/package.json
@@ -65,7 +65,8 @@
     "pro": "cross-env NODE_ENV=production webpack --config ./webpack/client.js --progress",
     "server": "cross-env NODE_ENV=production webpack --config ./webpack/server.js --progress",
     "build": "rm -rf dist && yarn pro && yarn server",
-    "start": "rm -rf dist && yarn pro && yarn server && nodemon ./dist/server/server.js"
+    "start": "rm -rf dist && yarn pro && yarn server && nodemon ./dist/server/server.js",
+    "pm2": "yarn build && pm2 startOrReload ecosystem.config.js"
   },
   "browserslist": "> 0.25%, not dead"
 }
