--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
     "braft-editor": "^2.3.7",
+    "braft-extensions": "^0.0.19",
     "cookie-parser": "^1.4.4",
+    "draft-js-prism": "^1.0.6",
     "express": "^4.17.1",
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "helmet": "^3.19.0",
     "node-fetch": "^2.6.0",
+    "prismjs": "^1.17.1",
     "react": "^16.8.6",
     "react-cropper": "^1.2.0",
     "react-dom": "^16.8.6",
