--- a/package.json
+++ b/package.json
@@ -29,8 +29,7 @@
     "react-router-dom": "^5.0.1",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "socket.io": "^2.2.0",
-    "xiaokyo-affix": "^1.0.8"
+    "socket.io": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.4",
@@ -47,6 +46,7 @@
     "cross-env": "^5.2.0",
     "css-loader": "^3.0.0",
     "file-loader": "^4.0.0",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "html-webpack-plugin": "^3.2.0",
     "http-proxy-middleware": "^0.20.0",
     "less": "^3.9.0",
