--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@babel/plugin-transform-runtime": "^7.5.0",
     "@babel/preset-env": "^7.5.4",
     "@babel/preset-react": "^7.0.0",
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "babel-loader": "^8.0.6",
     "babel-plugin-import": "^1.12.0",
     "babel-plugin-react-css-modules": "^5.2.6",
@@ -68,6 +69,7 @@
     "dev": "cross-env NODE_ENV=development node ./scripts/dev.js",
     "pro": "cross-env NODE_ENV=production webpack --config ./webpack/client.js --progress",
     "server": "cross-env NODE_ENV=production webpack --config ./webpack/server.js --progress",
+    "build:dll": "webpack --config ./webpack/dll.js",
     "build": "rm -rf dist && yarn pro && yarn server",
     "start": "rm -rf dist && yarn pro && yarn server && nodemon ./dist/server/server.js",
     "pm2": "yarn build && pm2 startOrReload ecosystem.config.js"
