--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "server": "cross-env NODE_ENV=production webpack --config ./webpack/server.js --progress",
     "build:dll": "webpack --config ./webpack/dll.js",
     "build": "rm -rf dist && yarn pro && yarn server",
-    "start": "rm -rf dist && yarn pro && yarn server && nodemon ./dist/server/server.js",
+    "start": "nodemon ./dist/server/server.js",
     "pm2": "yarn build && pm2 startOrReload ecosystem.config.js"
   },
   "browserslist": "> 0.25%, not dead"
