--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "xiaokyo <904656778@qq.com>",
   "license": "MIT",
   "dependencies": {
-    "antd": "^3.20.3",
+    "antd": "^4.1.2",
     "apollo-boost": "^0.4.3",
     "axios": "^0.19.0",
     "body-parser": "^1.19.0",
@@ -18,6 +18,7 @@
     "graphql": "^14.4.2",
     "graphql-tag": "^2.10.1",
     "helmet": "^3.19.0",
+    "moment": "^2.24.0",
     "node-fetch": "^2.6.0",
     "prismjs": "^1.17.1",
     "react": "^16.8.6",
