--- a/package.json
+++ b/package.json
@@ -33,47 +33,14 @@
     "socket.io": "^2.2.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.5.4",
-    "@babel/plugin-transform-runtime": "^7.5.0",
-    "@babel/preset-env": "^7.5.4",
-    "@babel/preset-react": "^7.0.0",
-    "add-asset-html-webpack-plugin": "^3.1.3",
-    "babel-loader": "^8.0.6",
-    "babel-plugin-import": "^1.12.0",
-    "babel-plugin-react-css-modules": "^5.2.6",
-    "clean-webpack-plugin": "^3.0.0",
-    "core-js": "^3.1.4",
-    "cross-env": "^5.2.0",
-    "css-loader": "^3.0.0",
-    "file-loader": "^4.0.0",
-    "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-webpack-plugin": "^3.2.0",
-    "less": "^3.9.0",
-    "less-loader": "^5.0.0",
-    "mini-css-extract-plugin": "^0.8.0",
-    "nodemon": "^1.19.1",
-    "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "postcss-less": "^3.1.4",
-    "postcss-loader": "^3.0.0",
-    "postcss-preset-env": "^6.7.0",
-    "redux-logger": "^3.0.6",
-    "uglifyjs-webpack-plugin": "^2.2.0",
-    "url-loader": "^2.0.1",
-    "webpack": "^4.35.3",
-    "webpack-bundle-analyzer": "^3.4.1",
-    "webpack-cli": "^3.3.6",
-    "webpack-dev-middleware": "^3.7.2",
-    "webpack-hot-middleware": "^2.25.0",
-    "webpack-node-externals": "^1.7.2",
-    "write-file-webpack-plugin": "^4.5.1"
+    "cross-env": "^7.0.2",
+    "kest": "1.0.5"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development node ./scripts/dev.js",
+    "dev": "cross-env NODE_ENV=development kest dev",
     "pro": "cross-env NODE_ENV=production webpack --config ./webpack/client.js --progress",
     "server": "cross-env NODE_ENV=production webpack --config ./webpack/server.js --progress",
-    "build:dll": "webpack --config ./webpack/dll.js",
     "build": "rm -rf dist && yarn build:dll && yarn pro && yarn server",
-    "start": "nodemon ./dist/server/server.js",
     "pm2": "yarn build && pm2 startOrReload ecosystem.config.js"
   },
   "browserslist": "> 0.25%, not dead"
