--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
-    "kest": "1.0.5"
+    "kest": "^1.0.9"
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development kest dev",
