--- a/package.json
+++ b/package.json
@@ -38,10 +38,8 @@
   },
   "scripts": {
     "dev": "cross-env NODE_ENV=development kest dev",
-    "pro": "cross-env NODE_ENV=production webpack --config ./webpack/client.js --progress",
-    "server": "cross-env NODE_ENV=production webpack --config ./webpack/server.js --progress",
-    "build": "rm -rf dist && yarn build:dll && yarn pro && yarn server",
-    "pm2": "yarn build && pm2 startOrReload ecosystem.config.js"
+    "build": "cross-env NODE_ENV=production kest build",
+    "server": "node ./dist/server/server.js"
   },
   "browserslist": "> 0.25%, not dead"
 }
