--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,11 +26,14 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
     # Runs a single command using the runners shell
+    - name: Setup Node.js environment
+      uses: actions/setup-node@v2.1.1
+      with:
+        # Version Spec of the version to use.  Examples: 12.x, 10.15.1, >=10.15.0
+        node-version: 12.x # optional
     - name: build
-      run: | 
-        npm ci
-        npm run build --if-present
-    - name: scp server
       run: |
-        ls dist
-      
+        npm ci ## 安装 npm 依赖
+        npm test
+        npm run build --if-present
+        ls
