--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,9 +10,9 @@ on:
     inputs:
       name:
         # Friendly description to be shown in the UI instead of 'name'
-        description: 'Person to greet'
+        description: 'build'
         # Default value if no value is explicitly provided
-        default: 'World'
+        default: 'production'
         # Input has to be provided for the workflow to run
         required: true
 
@@ -33,7 +33,6 @@ jobs:
         node-version: 12.x # optional
     - name: build
       run: |
-        npm ci ## 安装 npm 依赖
-        npm test
-        npm run build --if-present
+        npm i ## 安装 npm 依赖
+        npm run build
         ls
